practicle/09-ingress/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
  name: backend
  namespace: dev-backend
  labels:
    app: backend 

spec: 
  replicas: 2 
  selector: 
    matchLabels:
      app: backend 
  template:
    metadata:
      labels:
        app: backend
    spec: 
      containers:
      - name: backend
        image: hashicorp/http-echo
        args:
          - "-text=Hello from BACKEND"
        ports: 
        - containerPort: 5678
