practicle/09-ingress/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: dev-backend

spec:
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 5678
