practicle/09-ingress/backend-svc-pointer.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: dev-frontend
spec:
  type: ExternalName
  externalName: backend-svc.dev-backend.svc.cluster.local
  ports:
    - port: 80
