practicle/09-ingress/frontend-service.yaml
apiVersion: v1
kind: Service 
metadata: 
  name: frontend-svc
  namespace: dev-frontend
spec:
  selector:
    app: frontend 
  ports:
    - port: 80
      targetPort: 5678
